src/objects/Indent_Request__c.object
<CustomObject>
    <description>Indent Request</description>
    <fields>
        <fullName>Address__c</fullName>
        <formula>CreatedBy.Street</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Submission_Date__c</fullName>
        <inlineHelpText>Date when record is submitted for approval.</inlineHelpText>
        <label>Submission Date For Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>CreatedBy.City</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dispatch_Status__c</fullName>
        <formula>&apos;Closed&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dispatch Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dispatch_Sts__c</fullName>
        <label>Dispatch Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Indent_Request_Status__c</fullName>
        <label>Indent Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>Requisition</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pincode__c</fullName>
        <formula>CreatedBy.PostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pincode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requisition_Date__c</fullName>
        <label>Requisition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>CreatedBy.State</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <label>Indent Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>Approval_Date__c</columns>
        <columns>Dispatch_Status__c</columns>
        <columns>Indent_Request_Status__c</columns>
        <columns>Requisition_Date__c</columns>
        <columns>State__c</columns>
        <columns>Approval_Submission_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Pending_Indent_Request</fullName>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>Approval_Date__c</columns>
        <columns>Indent_Request_Status__c</columns>
        <columns>Dispatch_Sts__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Indent_Request_Status__c</field>
            <operation>equals</operation>
            <value>Pending Approval</value>
        </filters>
        <label>All Pending Indent Request</label>
        <sharedTo>
            <group>IndentApprover</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_indent_Request</fullName>
        <columns>NAME</columns>
        <columns>Dispatch_Sts__c</columns>
        <columns>Indent_Request_Status__c</columns>
        <columns>Approval_Submission_Date__c</columns>
        <columns>Address__c</columns>
        <columns>Approval_Date__c</columns>
        <columns>City__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Indent_Request_Status__c</field>
            <operation>equals</operation>
            <value>Pending Approval</value>
        </filters>
        <label>All indent Request</label>
    </listViews>
    <listViews>
        <fullName>My_Approved_Indent_Requests</fullName>
        <columns>NAME</columns>
        <columns>Indent_Request_Status__c</columns>
        <columns>Requisition_Date__c</columns>
        <columns>Approval_Date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Indent_Request_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>My Approved Indent Requests</label>
    </listViews>
    <listViews>
        <fullName>My_Cancelled_Indent_Requests</fullName>
        <columns>NAME</columns>
        <columns>Indent_Request_Status__c</columns>
        <columns>Requisition_Date__c</columns>
        <columns>Approval_Date__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Cancelled Indent Requests</label>
    </listViews>
    <listViews>
        <fullName>My_Indent_Requests</fullName>
        <columns>NAME</columns>
        <columns>Indent_Request_Status__c</columns>
        <columns>Requisition_Date__c</columns>
        <columns>Approval_Date__c</columns>
        <filterScope>Mine</filterScope>
        <label>My  Indent Requests</label>
    </listViews>
    <listViews>
        <fullName>My_Pending_Indent_Request</fullName>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>Approval_Date__c</columns>
        <columns>Indent_Request_Status__c</columns>
        <columns>Dispatch_Sts__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Indent_Request_Status__c</field>
            <operation>equals</operation>
            <value>Pending Approval</value>
        </filters>
        <label>My Pending Indent Request</label>
        <sharedTo>
            <group>IndentApprover</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Rejected_Indent_Requests</fullName>
        <columns>NAME</columns>
        <columns>Indent_Request_Status__c</columns>
        <columns>Requisition_Date__c</columns>
        <columns>Approval_Date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Indent_Request_Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>My Rejected Indent Requests</label>
    </listViews>
    <listViews>
        <fullName>This_week_Indent_Request</fullName>
        <columns>NAME</columns>
        <columns>Indent_Request_Status__c</columns>
        <columns>Requisition_Date__c</columns>
        <columns>Approval_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>This week Indent Request</label>
        <sharedTo>
            <group>IndentApprover</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Indent No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Indent Request</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>